--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -4,11 +4,6 @@
             {{/* Emoji stays bound to the name for a single logo unit. */}}
             <a class="nav-brand" href="{{ .Site.Home.Permalink }}">SMJ</a>
             
-            {{/* Theme toggle button */}}
-            <button class="theme-toggle" type="button" aria-label="Toggle theme">
-                <span class="theme-toggle-icon" aria-hidden="true">🌗</span>
-            </button>
-            
             <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="nav-menu">
                 <span class="sr-only">Toggle menu</span>
                 ☰
@@ -23,6 +18,12 @@
                     <a class="{{ if or ($current.IsMenuCurrent "main" .) ($current.HasMenuCurrent "main" .) }}is-active{{ end }}" href="{{ .URL | relURL }}">{{ .Name }}</a>
                 </li>
                 {{ end }}
+                {{/* Theme toggle button at end of menu */}}
+                <li>
+                    <button class="theme-toggle" type="button" aria-label="Toggle theme">
+                        <span class="theme-toggle-icon" aria-hidden="true">🌗</span>
+                    </button>
+                </li>
             </ul>
         </div>
         {{ end }}
