--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -17,7 +17,7 @@
   flex-direction: column;
   align-items: stretch;
   gap: $space-3;
-  padding: $space-3 $space-4;
+  padding: $space-3;
 }
 
 .nav-branding {
@@ -172,9 +172,10 @@
   .nav-menu {
     flex-direction: row;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
     padding: 0;
-    gap: $space-3;
+    gap: 0;
+    width: 100%;
   }
 
   .nav-menu a {
