--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -2,8 +2,8 @@
     <div class="nav-inner content-shell">
         <div class="nav-branding">
             <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="nav-menu">
-                <span class="sr-only">Toggle menu</span>
-                ☰
+                <span class="hamburger-icon">☰</span>
+                <span class="nav-toggle-label">Menu</span>
             </button>
         </div>
         {{ with .Site.Menus.main }}
